# krasis

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  run_frontend_tests.sh  run_tests.sh
backend/: .air.toml  .dockerignore  Dockerfile  Dockerfile.dev  Makefile  README.md  config.yaml  coverage.html  coverage.out  go.mod  go.sum
backend/cmd/: gen_hash.go
backend/migrations/: 000001_create_users_table.up.sql  000002_create_oauth_table.up.sql  000003_create_roles_table.up.sql  000004_create_notes_and_folders.up.sql  000005_create_note_versions_and_shares.down.sql  000005_create_note_versions_and_shares.up.sql  000006_create_files.up.sql  000007_add_full_text_search.down.sql  000007_add_full_text_search.up.sql  000008_create_ai_tables.down.sql  000008_create_ai_tables.up.sql  000009_create_admin_tables.down.sql  000009_create_admin_tables.up.sql  000010_add_chinese_fts.down.sql  000010_add_chinese_fts.up.sql  000011_seed_admin.up.sql  000012_index_notes_list.up.sql
backend/scripts/: build.sh  dev.sh  run.sh  start.sh
docker/nginx/: nginx.conf
docker/postgres/: Dockerfile  init-kaixin.sql  pg_hba.conf
docker/prometheus/: prometheus.yml
docs/: README.md  开发计划.md  验收标准.md
docs/architecture/: data-model.md  deployment.md  system-overview.md
docs/backend/: admin.md  api-spec.md  (+2 more)
frontend/: pubspec.yaml
sdk/python/: pyproject.toml
sdk/python/krasis/: __init__.py  ai.py  auth.py  client.py  collab.py  errors.py  notes.py  sdk.py  search.py  types.py
sdk/python/krasis_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+224 files in other folders)
